// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationCard: index for enterprise mode set initial state with no values 1`] = `
"<div className=\\"pt-card app-card\\">
  <div className=\\"row\\">
    <div className=\\"col-sm-1 text-center\\">
      <i className=\\"fa fa-rocket fa-5x\\" aria-hidden=\\"true\\" />
    </div>
    <div className=\\"col-sm-11\\">
      <div className=\\"row\\">
        <div className=\\"col-sm-8\\">
          <div className=\\"heading\\">
            <strong>
               
               
            </strong>
             - 
            <span>
               v
               
            </span>
          </div>
        </div>
        <div className=\\"col-sm-4 launchAndShare\\">
          <Blueprint.Popover position={7} content={{...}} popoverClassName=\\"popoverClassName\\" className=\\"share-popover\\" arrowSize={30} defaultIsOpen={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} inline={false} interactionKind={0} isDisabled={false} isModal={false} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={300} useSmartArrowPositioning={true} useSmartPositioning={false}>
            <button className=\\"pt-button pt-intent-primary pull-right\\" onClick={[Function]}>
              Share
            </button>
          </Blueprint.Popover>
          <button className=\\"pt-button pt-intent-primary pull-right\\" onClick={[Function: onClick]}>
            Launch
          </button>
        </div>
      </div>
      <div className=\\"neutral-baseline\\" />
      <div className=\\"row content\\">
        <div className=\\"col-sm-12\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`ApplicationCard: index for enterprise mode set initial state with values 1`] = `
"<div className=\\"pt-card app-card\\">
  <div className=\\"row\\">
    <div className=\\"col-sm-1 text-center\\">
      <i className=\\"fa fa-rocket fa-5x\\" aria-hidden=\\"true\\" />
    </div>
    <div className=\\"col-sm-11\\">
      <div className=\\"row\\">
        <div className=\\"col-sm-8\\">
          <div className=\\"heading\\">
            <strong>
               
              dAPP
               
            </strong>
             - 
            <span>
               v
              1.0
               
            </span>
          </div>
        </div>
        <div className=\\"col-sm-4 launchAndShare\\">
          <Blueprint.Popover position={7} content={{...}} popoverClassName=\\"popoverClassName\\" className=\\"share-popover\\" arrowSize={30} defaultIsOpen={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} inline={false} interactionKind={0} isDisabled={false} isModal={false} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={300} useSmartArrowPositioning={true} useSmartPositioning={false}>
            <button className=\\"pt-button pt-intent-primary pull-right\\" onClick={[Function]}>
              Share
            </button>
          </Blueprint.Popover>
          <span className=\\"launch-loader\\">
             
            <Loading type=\\"bars\\" color=\\"#f5f8fa\\" className=\\"pull-right\\" height={0} width={30} delay={1000} />
             
          </span>
        </div>
      </div>
      <div className=\\"neutral-baseline\\" />
      <div className=\\"row content\\">
        <div className=\\"col-sm-12\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`ApplicationCard: index for public mode set initial state with no values 1`] = `
"<div className=\\"pt-card app-card\\">
  <div className=\\"row\\">
    <div className=\\"col-sm-1 text-center\\">
      <i className=\\"fa fa-rocket fa-5x\\" aria-hidden=\\"true\\" />
    </div>
    <div className=\\"col-sm-11\\">
      <div className=\\"row\\">
        <div className=\\"col-sm-8\\">
          <div className=\\"heading\\">
            <strong>
               
               
            </strong>
             - 
            <span>
               v
               
            </span>
          </div>
        </div>
        <div className=\\"col-sm-4 launchAndShare\\">
          <Blueprint.Popover position={7} content={{...}} popoverClassName=\\"popoverClassName\\" className=\\"share-popover\\" arrowSize={30} defaultIsOpen={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} inline={false} interactionKind={0} isDisabled={false} isModal={false} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={300} useSmartArrowPositioning={true} useSmartPositioning={false}>
            <button className=\\"pt-button pt-intent-primary pull-right\\" onClick={[Function]}>
              Share
            </button>
          </Blueprint.Popover>
          <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary\\" id=\\"Login-button\\" text=\\"Launch\\" />
        </div>
      </div>
      <div className=\\"neutral-baseline\\" />
      <div className=\\"row content\\">
        <div className=\\"col-sm-12\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`ApplicationCard: index for public mode set initial state with values 1`] = `
"<div className=\\"pt-card app-card\\">
  <div className=\\"row\\">
    <div className=\\"col-sm-1 text-center\\">
      <i className=\\"fa fa-rocket fa-5x\\" aria-hidden=\\"true\\" />
    </div>
    <div className=\\"col-sm-11\\">
      <div className=\\"row\\">
        <div className=\\"col-sm-8\\">
          <div className=\\"heading\\">
            <strong>
               
              dAPP
               
            </strong>
             - 
            <span>
               v
              1.0
               
            </span>
          </div>
        </div>
        <div className=\\"col-sm-4 launchAndShare\\">
          <Blueprint.Popover position={7} content={{...}} popoverClassName=\\"popoverClassName\\" className=\\"share-popover\\" arrowSize={30} defaultIsOpen={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} inline={false} interactionKind={0} isDisabled={false} isModal={false} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={300} useSmartArrowPositioning={true} useSmartPositioning={false}>
            <button className=\\"pt-button pt-intent-primary pull-right\\" onClick={[Function]}>
              Share
            </button>
          </Blueprint.Popover>
          <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-intent-primary\\" id=\\"Login-button\\" text=\\"Launch\\" />
        </div>
      </div>
      <div className=\\"neutral-baseline\\" />
      <div className=\\"row content\\">
        <div className=\\"col-sm-12\\" />
      </div>
    </div>
  </div>
</div>"
`;

exports[`ApplicationCard: index mapStateToProps with default state 1`] = `
Object {
  "isLoading": false,
  "isLoggedIn": false,
  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
}
`;
